# currys_take_home

./: .gitignore  Makefile  README.md  pyproject.toml
bigquery/: sessions.sql  top_tip_earners.sql
data_ingestion/: github_pipeline.py  pyproject.toml
data_ingestion/.dlt/: .sources  config.toml  secrets.example.toml
data_ingestion/tests/: test_github_pipeline.py
data_transformation/: dbt.duckdb  env.secrets.sample  pyproject.toml
data_transformation/currys_takehome_duckdb/: dbt_project.yml
data_transformation/currys_takehome_duckdb/models/silver/: github_pr.sql  schema.yml
data_transformation/currys_takehome_synapse_dbt_project/: dbt_project.yml
data_transformation/currys_takehome_synapse_dbt_project/models/silver/: github_pr.sql
data_transformation/dbt_profiles/: .user.yml  profiles.yml
docker/data_ingestion_processes/: Dockerfile
docker/data_transformation_processes/: Dockerfile
docker/infrastructure_processes/: Dockerfile
infrastructure/: .terraform.lock.hcl  iam.tf  infra.env.sample  locals.tf  outputs.tf  providers.tf  storage.tf  synapse_arm.tf  variables.tf
infrastructure/synapse/: template.json
infrastrucutre/: locals.tf  outputs.tf  providers.tf  resource_group.tf  storage.tf  synapse.tf  variables.tf
sql/synapse/: query_pr.sql
src/pipelines/: github_pipeline.py
src/pipelines/.dlt/: config.toml  secrets.example.toml
tests/: test_github_pipeline.py
