[project]
name = "currys-take-home"
version = "0.1.0"
description = ""
authors = [
    {name = "Peter Osztodi",email = "osztodipeter@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.9.2,<3.15"
dependencies = [
    "dlt[github] (>=1.18.2,<2.0.0)",
    "requests (>=2.32.5,<3.0.0)",
    "adlfs (>=2025.8.0,<2026.0.0)",
    "fsspec (>=2025.10.0,<2026.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
pythonpath = ["src"]

[dependency-groups]
dev = [
    "pytest (>=8.4.2,<9.0.0)",
    "black (>=25.9.0,<26.0.0)"
]

[tool.poetry]
package-mode = false
