[project]
name = "data-transformation"
version = "0.1.0"
description = ""
authors = [
    {name = "Peter Osztodi",email = "osztodipeter@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "dbt-core (>=1.10.13,<2.0.0)",
    "dbt-duckdb (>=1.10.0,<2.0.0)",
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
